@@ -18,7 +18,7 @@ dumps = partial(json.dumps, separators=(',', ':'), sort_keys=True)
 class MultiSelection(SelectionMixin, Field):
     "Define a multi-selection field."
     _type = 'multiselection'
-    _sql_type = 'VARCHAR'
+    _sql_type = 'JSON'
     _py_type = tuple
 
     def __init__(self, selection, string='', sort=True, translate=True,
